syntax = "proto3";

package com.sitewhere.grpc.model;

option java_outer_classname = "UserModel";

import "sitewhere-common.proto";

// #############
// ### USERS ###
// #############

// Request for creating a user.
message GUserCreateRequest {
	GOptionalString username = 1;
	GOptionalString password = 2;
	GOptionalString firstName = 3;
	GOptionalString lastName = 4;
	GUserAccountStatus status = 5;
	repeated string authorities = 6;
	map<string, string> metadata = 7;
}

// Criteria for tenant search.
message GUserSearchCriteria {
	GPaging paging = 1;
}

// Results for user search.
message GUserSearchResults {
	int64 count = 1;
	repeated GUser users = 2;
}

// Information for a user.
message GUser {
	string username = 1;
	string hashedPassword = 2;
	string firstName = 3;
	string lastName = 4;
	uint64 lastLogin = 5;
	GUserAccountStatus status = 6;
	repeated string authorities = 7;
	GEntityInformation entityInformation = 8;
}

// ###########################
// ### GRANTED AUTHORITIES ###
// ###########################

// Request for creating a granted authority.
message GGrantedAuthorityCreateRequest {
	string authority = 1;
	string description = 2;
	GGrantedAuthorityReference parent = 3;
	bool group = 4;
}

// Criteria for granted authority search.
message GGrantedAuthoritySearchCriteria {
	GPaging paging = 1;
}

// Results for granted authority search.
message GGrantedAuthoritySearchResults {
	int64 count = 1;
	repeated GGrantedAuthority authorities = 2;
}

// Information for a granted authority.
message GGrantedAuthority {
	string authority = 1;
	string description = 2;
	GGrantedAuthorityReference parent = 3;
	bool group = 4;
}
